Bug 169006 - bug(accessibility): lack of keyboard accessibility in the window “Conditional Formatting for”
Summary: bug(accessibility): lack of keyboard accessibility in the window “Conditional...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.2.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility Conditional-Formatting-Editing
  Show dependency treegraph
 
Reported: 2025-10-22 14:33 UTC by Sasha Chernykh
Modified: 2025-11-05 07:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sasha Chernykh 2025-10-22 14:33:47 UTC
Description:
I can’t continue working in LibreOffice Calc using solely a keyboard when I select the item “Formula is” in the window “Conditional formatting for”.

This problem prevents the creation of macros when I need using formulas in my macros.


Steps to Reproduce:
I opened any “.csv” file in LibreOffice Calc → “Format” → “Conditional” → “Condition” → “More rules” → I pressed the down key (“↓”) to select the item “Formula is”:

https://i.imgur.com/agJEUUX.png

Actual Results:
Pressing any keyboard key has no effect.

Expected Results:
Ability writing a formula after pressing the key “Tab”.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 8; OS: Windows 11 X86_64 (build 22621); UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (en_US); UI: en-US
Calc: threaded
Comment 1 raal 2025-10-22 20:00:54 UTC
Doesn't works in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2595f031fa93c1eb89fb4dce6f337de9be813e15
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but works in GTK3
Comment 2 Commit Notification 2025-10-30 20:28:05 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe68266ddaf957ca28cde5d7709735d7a484908b

tdf#130857 tdf#169006 qt weld: Support Calc "Conditional Formatting" dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2025-10-30 20:30:25 UTC
(In reply to raal from comment #1)
> but works in GTK3

Also works when using native Qt widgets, i.e. SAL_VCL_QT_USE_WELDED_WIDGETS=1 on Linux with the commit from comment 2 in place to use native Qt widgets there.

This is independent of the vcl implementation (still used on Windows in any case), however, so that still needs to be investigated.
Comment 4 Michael Weghorn 2025-11-04 18:51:59 UTC
(In reply to Michael Weghorn from comment #3)
> This is independent of the vcl implementation (still used on Windows in any
> case), however, so that still needs to be investigated.


Pending fix: https://gerrit.libreoffice.org/c/core/+/193431
Comment 5 Commit Notification 2025-11-04 20:03:56 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/752adf6cc9d869bbcf34fcf09c80da502398cb81

tdf#169006 sc a11y: Keep keyboard focus in conditional formatting dlg

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-11-05 07:14:04 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/fbef49982f2f4943685495cfdb150c46ce5b7527

tdf#169006 sc a11y: Keep keyboard focus in conditional formatting dlg

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.